# stftPitchShiftPlugin

./: .editorconfig  .gitignore  CMakeLists.txt  MANUAL.md  Makefile  README.md  StftPitchShiftPlugin.sublime-project
.github/workflows/: build.yml
lib/: CPM.cmake  JIVE.cmake  JUCE.cmake  Pluginval.cmake  PocketFFT.cmake  StftPitchShift.cmake
scripts/: build_macos.sh  build_ubuntu.sh  build_windows.bat  debian_build.sh  debian_setup.sh  postbuild_macos.sh  postbuild_ubuntu.sh  postbuild_windows.bat  prebuild_ubuntu.sh  sound_recording_windows.bat  ubuntu_build.sh
src/StftPitchShiftPlugin/: Chronometer.h  Chronometry.h  Core.cpp  Core.h  Editor.cpp  Editor.h  Effect.cpp  Effect.h  FFT.h  GenericParameterContainer.h  GenericParameterListener.h  Logger.h  Parameters.cpp  Parameters.h  Plugin.cmake  Plugin.cpp  Plugin.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Processor.cpp  Processor.h
src/StftPitchShiftPlugin/Core/: DelayedCore.cpp  DelayedCore.h  InstantCore.cpp  InstantCore.h
src/StftPitchShiftPlugin/Effect/: DelayedEffect.cpp  DelayedEffect.h  InstantEffect.cpp  InstantEffect.h
src/StftPitchShiftPlugin/FFT/: PocketFFT.h  RealFFT.h
src/StftPitchShiftPlugin/Parameters/: GenericParameterContainer.h  GenericParameterListener.h  GenericParameterSubscription.h
